--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Content/Fundamentals/Materials/Content/Textures/T_GDC_LargeVolcanicRock_001_D2_R.uasset filter=lfs diff=lfs merge=lfs -text
+Content/Fundamentals/Materials/Content/Textures/T_GDC_LargeVolcanicRock_001_N.uasset filter=lfs diff=lfs merge=lfs -text
