--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-Description=Trey Cluff's 2nd CGT 545 assignment
+Description=Template for 2nd CGT 545 assignment
 ProjectID=8EB165D54BA0FD1C3CF869885EF9416E
-ProjectName=cgt545_02_Cluff_Trey
+ProjectName=cgt545_02_TEMPLATE
 
